[package]
name = "swc_plugin_react_native_web_css_modules"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
swc_plugin = "0.60.0"
swc_ecma_quote = "0.18.0"
swc_common = "0.18.0"
tracing = "0.1.35"

[dependencies.swc_ecma_ast]
version = "0.79.0"
