[package]
name = "swc_plugin_react_native_web_css_modules"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tracing = "0.1.35"
swc_common = { version = "0.29.13", features = ["concurrent"] }
swc_core = { version = "0.40.56", features = [
    "plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "ecma_ast",
    "ecma_quote",
    "common",
] }